--- a/app/src/main/res/layout/card_info.xml
+++ b/app/src/main/res/layout/card_info.xml
@@ -1,32 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
     android:id="@+id/LinearAbout"
+    android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="12.0dip"
-        app:cardElevation="8.0dip"
-        app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="true">
+        android:orientation="vertical"
+        android:padding="25dp">
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:padding="25dp"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/img"
-                android:scaleType="fitCenter"
-                android:layout_width="match_parent"
-                android:layout_height="150dp" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:scaleType="fitCenter" />
+    </LinearLayout>
 
     <android.support.v7.widget.CardView
         android:layout_width="fill_parent"
@@ -75,6 +66,146 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="12.0dip"
+        app:cardElevation="8.0dip"
+        android:id="@+id/ourvissionCard"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/gradient_8"
+            android:orientation="vertical"
+            android:padding="8.0dip">
+
+            <TextView
+                fontPath="@string/sans_bold"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:padding="12.0dip"
+                android:text="Our Vision"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textColor="#fff" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:minHeight="@dimen/md_listitem_height"
+                android:orientation="vertical"
+                android:paddingBottom="8.0dip"
+                android:paddingEnd="16.0dip"
+                android:paddingStart="16.0dip"
+                android:paddingTop="8.0dip">
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/ourvision"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.85"
+                    android:text="This is Description"
+                    android:textColor="#fff" />
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="12.0dip"
+        android:id="@+id/ourvalueCard"
+        app:cardElevation="8.0dip"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/gradient_2"
+            android:orientation="vertical"
+            android:padding="8.0dip">
+
+            <TextView
+                fontPath="@string/sans_bold"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:padding="12.0dip"
+                android:text="Our Value"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textColor="#fff" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:minHeight="@dimen/md_listitem_height"
+                android:orientation="vertical"
+                android:paddingBottom="8.0dip"
+                android:paddingEnd="16.0dip"
+                android:paddingStart="16.0dip"
+                android:paddingTop="8.0dip">
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/ourvalue"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.85"
+                    android:text="This is Description"
+                    android:textColor="#fff" />
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="12.0dip"
+        app:cardElevation="8.0dip"
+        android:id="@+id/ourmissionCard"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/gradient_4"
+            android:orientation="vertical"
+            android:padding="8.0dip">
+
+            <TextView
+                fontPath="@string/sans_bold"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:padding="12.0dip"
+                android:text="Our Mission"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textColor="#fff" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:minHeight="@dimen/md_listitem_height"
+                android:orientation="vertical"
+                android:paddingBottom="8.0dip"
+                android:paddingEnd="16.0dip"
+                android:paddingStart="16.0dip"
+                android:paddingTop="8.0dip">
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/ourmission"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.85"
+                    android:text="This is Description"
+                    android:textColor="#fff" />
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
     <android.support.v7.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
