--- a/app/src/main/res/layout/recycler_tracklist_item.xml
+++ b/app/src/main/res/layout/recycler_tracklist_item.xml
@@ -19,7 +19,7 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:padding="10dp"
-            android:layout_toLeftOf="@id/arrow"
+            android:layout_toRightOf="@id/arrow"
             android:text="Hello"
             android:textColor="#000"
             android:textSize="20sp" />
@@ -28,9 +28,9 @@
             android:id="@+id/arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow"
+            android:src="@drawable/ic_pdf"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentLeft="true"/>
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
